projeto-fsharp/minekube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    app: myapp
  ports:
  - name: http
    port: 8085
    targetPort: 8085
  type: NodePort
